components/src/components/banner/banner.scss
@import "@scania/typography/dist/scss/mixins";
@import "@scania/typography/dist/scss/tokens";

:root,
html {
  --sdds-banner-bg-default: var(--sdds-grey-50);
  --sdds-banner-bg-info: var(--sdds-grey-300);
  --sdds-banner-bg-error: var(--sdds-red-100);
  --sdds-banner-prefix-default-color: var(--sdds-grey-700);
  --sdds-banner-prefix-info-color: var(--sdds-blue-400);
  --sdds-banner-prefix-error-color: var(--sdds-red-500);
}

.sdds-banner {
  background-color: var(--sdds-banner-bg-default);
  padding: var(--sdds-spacing-element-16);
  display: flex;

  &.sdds-banner-info {
    background-color: var(--sdds-banner-bg-info);
  }

  &.sdds-banner-error {
    background-color: var(--sdds-banner-bg-error);
  }
}

.sdds-banner-prefix {
  display: inline-flex;
  flex-basis: 16px;
  height: 16px;
  width: 100%;
  margin-right: var(--sdds-spacing-element-12);
  font-size: 4rem;
  color: var(--sdds-banner-prefix-default-color);

  .sdds-banner-info & {
    color: var(--sdds-banner-prefix-info-color);
  }

  .sdds-banner-error & {
    color: var(--sdds-banner-prefix-error-color);
  }
}

.sdds-banner-body {
  flex-grow: 1;
  padding-right: 24px;
}

.sdds-banner-close {
  flex-basis: 16px;
  height: 16px;
  width: 16px;
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M3.40533 2.34321C3.11244 2.05031 2.63756 2.05031 2.34467 2.34321C2.05178 2.6361 2.05178 3.11097 2.34467 3.40387L6.94093 8.00012L2.34478 12.5963C2.05189 12.8892 2.05189 13.364 2.34478 13.6569C2.63768 13.9498 3.11255 13.9498 3.40544 13.6569L8.00159 9.06078L12.5977 13.6569C12.8906 13.9498 13.3655 13.9498 13.6584 13.6569C13.9513 13.364 13.9513 12.8891 13.6584 12.5963L9.06225 8.00012L13.6585 3.40388C13.9514 3.11098 13.9514 2.63611 13.6585 2.34322C13.3656 2.05032 12.8907 2.05032 12.5978 2.34322L8.00159 6.93946L3.40533 2.34321Z' fill='%23171719'/%3E%3C/svg%3E%0A");
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
}

.sdds-banner-header {
  margin: 0;

  + .sdds-banner-link,
  + .sdds-banner-subheader {
    margin-top: 4px;
  }
}

.sdds-banner-subheader {
  @include type-style("detail-02");

  + .sdds-banner-link {
    margin-top: var(--sdds-spacing-element-16);
  }
}

.sdds-banner-link {
  display: block;

  @include type-style("detail-03");
}

